filter point attributes by date
