# api/src/database/mongoDb/models/pointAttributesModel.js
@@ -2,8 +2,9 @@ const mongoose = require('mongoose');
 const APIError = require('../../../helpers/APIError');
 const { POINT_ATTRIBUTES_COLLECTION } = require('../dbSchemas/pointAttributeSchema');
 const { filterCoordinates } = require('../filters');
+const { dateIsValidDatum } = require('../../../helpers/utils');
 
-const getFilteredPointAttributes = async (attributeId, bottomLeft, topRight) => {
+const getFilteredPointAttributes = async (attributeId, bottomLeft, topRight, dateStart, dateEnd) => {
   const { connection } = mongoose;
   const { db } = connection;
 
@@ -15,8 +16,59 @@ const getFilteredPointAttributes = async (attributeId, bottomLeft, topRight) => 
     filter['properties.attributeId'] = attributeId;
   }
 
+  // date filters
+  if (dateStart && dateEnd) {
+    if (dateIsValidDatum(dateStart) && dateIsValidDatum(dateEnd)) {
+      if (!(new Date(dateStart) <= new Date(dateEnd))) {
+        throw new APIError('Invalid date format: Start date is greater than end date', 400, true);
+      }
+      filter['properties.date'] = { $gte: dateStart, $lte: dateEnd };
+    } else {
+      throw new APIError('Invalid date format', 400, true);
+    }
+  } else if (dateStart) {
+    if (!dateIsValidDatum(dateStart)) {
+      throw new APIError('Invalid date format', 400, true);
+    }
+    filter['properties.date'] = { $gte: dateStart };
+  } else if (dateEnd) {
+    if (!dateIsValidDatum(dateEnd)) {
+      throw new APIError('Invalid date format', 400, true);
+    }
+    filter['properties.date'] = { $lte: dateEnd };
+  }
+
   const attributes = await db.collection(POINT_ATTRIBUTES_COLLECTION).find(filter).toArray();
   return attributes;
+};
+
+const getLastDatePointAttributes = async (attributeId, bottomLeft, topRight) => {
+  const { connection } = mongoose;
+  const { db } = connection;
+
+  let filter = {};
+  if (bottomLeft && topRight) {
+    filter = filterCoordinates(filter, bottomLeft, topRight);
+  }
+  if (attributeId) {
+    filter['properties.attributeId'] = attributeId;
+  }
+
+  const lastDate = await db
+    .collection(POINT_ATTRIBUTES_COLLECTION)
+    .find({ 'properties.attributeId': attributeId })
+    .sort({ 'properties.date': -1 })
+    .limit(1)
+    .toArray();
+
+  if (!lastDate || !lastDate.length) {
+    throw new APIError(`Failed fetching last date for ${attributeId} in ${POINT_ATTRIBUTES_COLLECTION}`, 500, false);
+  }
+
+  // eslint-disable-next-line prefer-destructuring
+  filter['properties.date'] = lastDate[0].properties.date;
+  const pointAttributes = await db.collection(POINT_ATTRIBUTES_COLLECTION).find(filter).toArray();
+  return pointAttributes;
 };
 
 const getUniqueValues = async (attributeId, property) => {
@@ -42,4 +94,4 @@ const getUniqueValues = async (attributeId, property) => {
   return values.map((item) => item._id);
 };
 
-module.exports = { getFilteredPointAttributes, getUniqueValues };
+module.exports = { getFilteredPointAttributes, getLastDatePointAttributes, getUniqueValues };
